simple-service.yml
apiVersion: v1
kind: Service
metadata:
 name: nginx-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 3050
      targetPort: 80
